--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -73,8 +73,8 @@ body {
   }
 }
 
-main, nav {
-  @apply max-w-5xl mx-auto my-12;
+main {
+  @apply max-w-6xl mx-auto px-4 py-4;
 }
 p {
   @apply mt-2;
